--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,13 +5,6 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -23,4 +16,27 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.react-calendar__tile {
+  position: relative;
+  height: 60px
+}
+
+.point-calendrier {
+  width: 6px;
+  height: 6px;
+  background-color: #d47950;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 15%;
+  right: 15%;
+}
+
+.react-calendar {
+  width: 100% !important;
+  max-width: 800px;
+  font-size: 1.1rem;
+  margin: 0 auto;
+  justify-content: "center";
 }
